# org-fmt

./: Cargo.toml  README.org  TODO.org  config.example.toml  flake.nix  rust-template.json
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: format.rs  lib.rs
crates/lib/tests/: format.rs
frontend/public/: index.html
frontend/src/: Main.elm
nix/modules/: web.nix
